; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/d3d9/extr_format.c_IsBackBufferFormat.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/d3d9/extr_format.c_IsBackBufferFormat.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@D3DFMT_A8R8G8B8 = common dso_local global i64 0, align 8
@D3DFMT_A1R5G5B5 = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @IsBackBufferFormat(i64 %0) #0 {
  %2 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %3 = load i64, i64* %2, align 8
  %4 = load i64, i64* @D3DFMT_A8R8G8B8, align 8
  %5 = icmp sge i64 %3, %4
  br i1 %5, label %6, label %10

6:                                                ; preds = %1
  %7 = load i64, i64* %2, align 8
  %8 = load i64, i64* @D3DFMT_A1R5G5B5, align 8
  %9 = icmp slt i64 %7, %8
  br i1 %9, label %14, label %10

10:                                               ; preds = %6, %1
  %11 = load i64, i64* %2, align 8
  %12 = call i64 @IsExtendedFormat(i64 %11)
  %13 = icmp ne i64 %12, 0
  br label %14

14:                                               ; preds = %10, %6
  %15 = phi i1 [ true, %6 ], [ %13, %10 ]
  %16 = zext i1 %15 to i32
  ret i32 %16
}

declare dso_local i64 @IsExtendedFormat(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
